--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ccreator-ai",
+  "name": "creator-ai",
   "version": "0.1.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google/genai": "^1.22.0",
-    "html2canvas": "^1.4.1",
+    "@google/genai": "1.24.0",
     "next": "15.0.4",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
